homepage overflow idden fixed

--- a/client/src/app/stylesheets/layouts/responsive.scss
+++ b/client/src/app/stylesheets/layouts/responsive.scss
@@ -22,20 +22,17 @@
     @media screen and (min-width: 576px) {
     .col-xs-6 {
     -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 1 0 50%;
     }
     }
     @media screen and (min-width: 768px) {
     .col-md-3 {
     -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
-    max-width: 25%;
+    flex: 1 0 25%;
     }
     .col-md-4 {
     -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 1 0 50%;
     }
     }
     .container {
